InternexDev_Sandbox/src/objects/QB_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Akritiv_Client_Name__c</fullName>
        <label>Akritiv Client Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Akritiv_Debtor_Id__c</fullName>
        <label>Akritiv Debtor Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Akritiv_Invoice_ID__c</fullName>
        <label>Akritiv Invoice ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowIPNPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllowIPNPayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowOnlineACHPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllowOnlineACHPayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowOnlineCreditCardPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllowOnlineCreditCardPayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowOnlinePayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllowOnlinePayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplyTaxAfterDiscount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ApplyTaxAfterDiscount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Email__c</fullName>
        <label>Bill Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <label>Billing ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Line_1__c</fullName>
        <label>Billing Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Line_2__c</fullName>
        <label>Billing Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Line_3__c</fullName>
        <label>Billing Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Location__c</fullName>
        <label>Billing Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crew__c</fullName>
        <label>Crew #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerMemo__c</fullName>
        <label>CustomerMemo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerRef__c</fullName>
        <label>CustomerRef</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_with_QB_Id__c</fullName>
        <externalId>true</externalId>
        <label>Customer with QB Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>DueDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmailStatus__c</fullName>
        <label>EmailStatus</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_Transaction_ID__c</fullName>
        <label>Linked Transaction ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_Transaction_Type__c</fullName>
        <label>Linked Transaction Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrintStatus__c</fullName>
        <label>PrintStatus</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_CreateTime__c</fullName>
        <label>QB CreateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QB_ID__c</fullName>
        <label>QB ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_LastUpdatedTime__c</fullName>
        <label>QB LastUpdatedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SalesTermRef__c</fullName>
        <label>SalesTermRef</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shippin_CountrySubDivisionCode__c</fullName>
        <label>Shippin CountrySubDivisionCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Id__c</fullName>
        <label>Shipping Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Line_1__c</fullName>
        <label>Shipping Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_PostalCode__c</fullName>
        <label>Shipping PostalCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <label>SyncToken</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmt__c</fullName>
        <label>TotalAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tax__c</fullName>
        <label>Total Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>shipping_Location__c</fullName>
        <label>shipping Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <label>QB Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>QB Document Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>